fix : 기업명 white-space: nowrap 추가

--- a/src/components/CompanyRank/InvestList/InvestList.module.css
+++ b/src/components/CompanyRank/InvestList/InvestList.module.css
@@ -238,6 +238,7 @@
 
   .list li:nth-child(2) {
     width: 20.11%;
+    white-space: nowrap;
   }
 
   .list li:nth-child(3) {
