--- a/src/components/InvestList/InvestList.module.css
+++ b/src/components/InvestList/InvestList.module.css
@@ -132,6 +132,7 @@
 
   .th li:nth-child(2) {
     width: 20.11%;
+    white-space: nowrap;
   }
 
   .th li:nth-child(3) {
